// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Auto calculate height and width 1`] = `
<div>
  <div
    id="test1"
    style="width: 100px; position: relative; height: 50px;"
  >
    <div
      style="position: absolute; top: 0px; left: 10px;"
    >
      <div
        style="position: relative; height: 12.5px; width: 90px; overflow: hidden; will-change: transform; direction: ltr;"
      >
        <div
          style="height: 100%; width: 36px;"
        >
          <div
            style="position: absolute; left: 0px; top: 0px; height: 100%; width: 20px;"
          >
            Column 1
          </div>
          <div
            style="position: absolute; left: 20px; top: 0px; height: 100%; width: 16px;"
          >
            Column 2
          </div>
        </div>
      </div>
    </div>
    <div
      style="position: absolute; left: 0px; top: 12.5px;"
    >
      <div
        style="position: relative; height: 37.5px; width: 10px; overflow: hidden; will-change: transform; direction: ltr;"
      >
        <div
          style="height: 37.5px; width: 100%;"
        >
          <div
            style="position: absolute; left: 0px; top: 0px; height: 12.5px; width: 100%;"
          >
            1
          </div>
          <div
            style="position: absolute; left: 0px; top: 12.5px; height: 12.5px; width: 100%;"
          >
            2
          </div>
          <div
            style="position: absolute; left: 0px; top: 25px; height: 12.5px; width: 100%;"
          >
            3
          </div>
        </div>
      </div>
    </div>
    <div
      style="position: absolute; left: 10px; top: 12.5px;"
    >
      <div
        style="position: relative; height: 37.5px; width: 90px; overflow: auto; will-change: transform; direction: ltr;"
      >
        <div
          style="height: 37.5px; width: 36px;"
        >
          <div
            style="position: absolute; left: 0px; top: 0px; height: 12.5px; width: 20px; overflow: hidden; text-overflow: ellipsis;"
          >
            cell l/c 1/1
          </div>
          <div
            style="position: absolute; left: 20px; top: 0px; height: 12.5px; width: 16px; overflow: hidden; text-overflow: ellipsis;"
          >
            cell 1/2
          </div>
          <div
            style="position: absolute; left: 0px; top: 12.5px; height: 12.5px; width: 20px; overflow: hidden; text-overflow: ellipsis;"
          >
            cell 2/1
          </div>
          <div
            style="position: absolute; left: 20px; top: 12.5px; height: 12.5px; width: 16px; overflow: hidden; text-overflow: ellipsis;"
          >
            cell 2/2
          </div>
          <div
            style="position: absolute; left: 0px; top: 25px; height: 12.5px; width: 20px; overflow: hidden; text-overflow: ellipsis;"
          >
            cell 3/1
          </div>
          <div
            style="position: absolute; left: 20px; top: 25px; height: 12.5px; width: 16px; overflow: hidden; text-overflow: ellipsis;"
          >
            cell 3/2
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Case when recordset is empty use label or id to calc width 1`] = `
<div>
  <div
    id="test2"
    style="width: 100px; position: relative; height: 50px;"
  >
    <div
      style="position: absolute; top: 0px; left: 10px;"
    >
      <div
        style="position: relative; height: 12.5px; width: 90px; overflow: hidden; will-change: transform; direction: ltr;"
      >
        <div
          style="height: 100%; width: 32px;"
        >
          <div
            style="position: absolute; left: 0px; top: 0px; height: 100%; width: 16px;"
          >
            Column 1
          </div>
          <div
            style="position: absolute; left: 16px; top: 0px; height: 100%; width: 16px;"
          >
            Column 2
          </div>
        </div>
      </div>
    </div>
    <div
      style="position: absolute; left: 0px; top: 12.5px;"
    >
      <div
        style="position: relative; height: 37.5px; width: 10px; overflow: hidden; will-change: transform; direction: ltr;"
      >
        <div
          style="height: 0px; width: 100%;"
        />
      </div>
    </div>
    <div
      style="position: absolute; left: 10px; top: 12.5px;"
    >
      <div
        style="position: relative; height: 37.5px; width: 90px; overflow: auto; will-change: transform; direction: ltr;"
      >
        <div
          style="height: 0px; width: 100px;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Use customized render 1`] = `
<div>
  <div
    id="test3"
    style="width: 200px; position: relative; height: 500px;"
  >
    <div
      style="position: absolute; top: 0px; left: 30px;"
    >
      <div
        style="position: relative; height: 12.5px; width: 170px; overflow: hidden; will-change: transform; direction: ltr;"
      >
        <div
          style="height: 100%; width: 96px;"
        >
          <div
            style="position: absolute; left: 0px; top: 0px; height: 100%; width: 16px;"
          >
            Column 1
          </div>
          <div
            style="position: absolute; left: 16px; top: 0px; height: 100%; width: 16px;"
          >
            Column 2
          </div>
          <div
            style="position: absolute; left: 32px; top: 0px; height: 100%; width: 16px;"
          >
            Column 3
          </div>
          <div
            style="position: absolute; left: 48px; top: 0px; height: 100%; width: 16px;"
          >
            Column 4
          </div>
          <div
            style="position: absolute; left: 64px; top: 0px; height: 100%; width: 16px;"
          >
            Column 5
          </div>
          <div
            style="position: absolute; left: 80px; top: 0px; height: 100%; width: 16px;"
          >
            Column 6
          </div>
        </div>
      </div>
    </div>
    <div
      style="position: absolute; left: 0px; top: 12.5px;"
    >
      <div
        style="position: relative; height: 487.5px; width: 30px; overflow: hidden; will-change: transform; direction: ltr;"
      >
        <div
          style="height: 75px; width: 100%;"
        >
          <div
            style="position: absolute; left: 0px; top: 0px; height: 12.5px; width: 100%;"
          >
            1
          </div>
          <div
            style="position: absolute; left: 0px; top: 12.5px; height: 12.5px; width: 100%;"
          >
            2
          </div>
          <div
            style="position: absolute; left: 0px; top: 25px; height: 12.5px; width: 100%;"
          >
            3
          </div>
          <div
            style="position: absolute; left: 0px; top: 37.5px; height: 12.5px; width: 100%;"
          >
            4
          </div>
          <div
            style="position: absolute; left: 0px; top: 50px; height: 12.5px; width: 100%;"
          >
            5
          </div>
          <div
            style="position: absolute; left: 0px; top: 62.5px; height: 12.5px; width: 100%;"
          >
            6
          </div>
        </div>
      </div>
    </div>
    <div
      style="position: absolute; left: 30px; top: 12.5px;"
    >
      <div
        style="position: relative; height: 487.5px; width: 170px; overflow: auto; will-change: transform; direction: ltr;"
      >
        <div
          style="height: 75px; width: 96px;"
        >
          <div
            style="position: absolute; left: 0px; top: 0px; height: 12.5px; width: 16px;"
          >
            cell 1/1
          </div>
          <div
            style="position: absolute; left: 16px; top: 0px; height: 12.5px; width: 16px;"
          >
            cell 1/2
          </div>
          <div
            style="position: absolute; left: 32px; top: 0px; height: 12.5px; width: 16px;"
          >
            cell 1/3
          </div>
          <div
            style="position: absolute; left: 48px; top: 0px; height: 12.5px; width: 16px;"
          >
            cell 1/4
          </div>
          <div
            style="position: absolute; left: 64px; top: 0px; height: 12.5px; width: 16px;"
          >
            cell 1/5
          </div>
          <div
            style="position: absolute; left: 80px; top: 0px; height: 12.5px; width: 16px;"
          >
            cell 1/6
          </div>
          <div
            style="position: absolute; left: 0px; top: 12.5px; height: 12.5px; width: 16px;"
          >
            cell 2/1
          </div>
          <div
            style="position: absolute; left: 16px; top: 12.5px; height: 12.5px; width: 16px;"
          >
            cell 2/2
          </div>
          <div
            style="position: absolute; left: 32px; top: 12.5px; height: 12.5px; width: 16px;"
          >
            cell 2/3
          </div>
          <div
            style="position: absolute; left: 48px; top: 12.5px; height: 12.5px; width: 16px;"
          >
            cell 2/4
          </div>
          <div
            style="position: absolute; left: 64px; top: 12.5px; height: 12.5px; width: 16px;"
          >
            cell 2/5
          </div>
          <div
            style="position: absolute; left: 80px; top: 12.5px; height: 12.5px; width: 16px;"
          >
            cell 2/6
          </div>
          <div
            style="position: absolute; left: 0px; top: 25px; height: 12.5px; width: 16px;"
          >
            cell 3/1
          </div>
          <div
            style="position: absolute; left: 16px; top: 25px; height: 12.5px; width: 16px;"
          >
            cell 3/2
          </div>
          <div
            style="position: absolute; left: 32px; top: 25px; height: 12.5px; width: 16px;"
          >
            cell 3/3
          </div>
          <div
            style="position: absolute; left: 48px; top: 25px; height: 12.5px; width: 16px;"
          >
            cell 3/4
          </div>
          <div
            style="position: absolute; left: 64px; top: 25px; height: 12.5px; width: 16px;"
          >
            cell 3/5
          </div>
          <div
            style="position: absolute; left: 80px; top: 25px; height: 12.5px; width: 16px;"
          >
            cell 3/6
          </div>
          <div
            style="position: absolute; left: 0px; top: 37.5px; height: 12.5px; width: 16px;"
          >
            cell 4/1
          </div>
          <div
            style="position: absolute; left: 16px; top: 37.5px; height: 12.5px; width: 16px;"
          >
            cell 4/2
          </div>
          <div
            style="position: absolute; left: 32px; top: 37.5px; height: 12.5px; width: 16px;"
          >
            cell 4/3
          </div>
          <div
            style="position: absolute; left: 48px; top: 37.5px; height: 12.5px; width: 16px;"
          >
            cell 4/4
          </div>
          <div
            style="position: absolute; left: 64px; top: 37.5px; height: 12.5px; width: 16px;"
          >
            cell 4/5
          </div>
          <div
            style="position: absolute; left: 80px; top: 37.5px; height: 12.5px; width: 16px;"
          >
            cell 4/6
          </div>
          <div
            style="position: absolute; left: 0px; top: 50px; height: 12.5px; width: 16px;"
          >
            cell 5/1
          </div>
          <div
            style="position: absolute; left: 16px; top: 50px; height: 12.5px; width: 16px;"
          >
            cell 5/2
          </div>
          <div
            style="position: absolute; left: 32px; top: 50px; height: 12.5px; width: 16px;"
          >
            cell 5/3
          </div>
          <div
            style="position: absolute; left: 48px; top: 50px; height: 12.5px; width: 16px;"
          >
            cell 5/4
          </div>
          <div
            style="position: absolute; left: 64px; top: 50px; height: 12.5px; width: 16px;"
          >
            cell 5/5
          </div>
          <div
            style="position: absolute; left: 80px; top: 50px; height: 12.5px; width: 16px;"
          >
            cell 5/6
          </div>
          <div
            style="position: absolute; left: 0px; top: 62.5px; height: 12.5px; width: 16px;"
          >
            cell 6/1
          </div>
          <div
            style="position: absolute; left: 16px; top: 62.5px; height: 12.5px; width: 16px;"
          >
            cell 6/2
          </div>
          <div
            style="position: absolute; left: 32px; top: 62.5px; height: 12.5px; width: 16px;"
          >
            cell 6/3
          </div>
          <div
            style="position: absolute; left: 48px; top: 62.5px; height: 12.5px; width: 16px;"
          >
            cell 6/4
          </div>
          <div
            style="position: absolute; left: 64px; top: 62.5px; height: 12.5px; width: 16px;"
          >
            cell 6/5
          </div>
          <div
            style="position: absolute; left: 80px; top: 62.5px; height: 12.5px; width: 16px;"
          >
            cell 6/6
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
